added commenting to post detail

--- a/apps/ForumComposite/Views/Post/Detail.cshtml
+++ b/apps/ForumComposite/Views/Post/Detail.cshtml
@@ -1,4 +1,7 @@
-﻿@model ForumComposite.ViewModels.Post.PostDetailViewModel
+﻿@using Euclid.Common.Extensions
+@using Euclid.Composites.Mvc.Extensions
+@using ForumComposite.Models
+@model ForumComposite.ViewModels.Post.PostDetailViewModel
 @{
 	ViewBag.Title = ForumName + " - " + Model.Post.InitialPost.Title;
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
@@ -74,26 +77,7 @@
 				<button id="addComment" class="btn large primary">Add a Comment</button>
 
 				<div id="addCommentForm" style="display: none;">
-					<form>
-						<fieldset><legend>Add a Comment</legend>
-
-							<div class="clearfix">
-								<label for="newCommentBody">Comment</label>
-
-								<div class="input">
-									<textarea class="xxlarge" name="newCommentBody" rows="6"></textarea>
-									<span class="help-block">Please be civil.</span>
-								</div>
-
-							</div>
-
-							<div class="actions">
-								<input id="publishComment" type="button" class="btn primary" value="Publish Comment" />
-								<input id="cancelComment" type="button" class="btn" value="Cancel" />
-							</div>
-
-						</fieldset>
-					</form>
+					@Html.Partial("NewComment", new CommentOnPostInputModel(){ PostIdentifier = Model.Post.Identifier})
 				</div>
 
 			</div>
@@ -128,6 +112,39 @@
 		</div>
 
 		<hr style="margin-top: 0px;" />
+
+		@foreach(var comment in Model.Post.Comments)
+		{
+
+			<div class="comment">
+				<div class="row">
+					<div class="span3">
+						<div class="row">
+							<div class="span1" style="margin-top: 4px;">
+								<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = comment.AuthorDisplayName.Slugify() })">
+									<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
+							</div>
+							<div class="span2" style="margin-left: 0px;">
+								<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = comment.AuthorDisplayName.Slugify() })">@comment.AuthorDisplayName</a><br />
+								<small style="font-size: smaller;">About an hour ago</small>
+							</div>
+						</div>
+					</div>
+					<div class="span9">
+						<p>@comment.Body</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="span8 offset3">
+						<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
+					</div>
+				</div>
+			</div>		
+		}
+
+		<hr/>
+		
+		Static comments, remove later
 
 		<div class="comment">
 
@@ -204,369 +221,6 @@
 
 				<div class="span8 offset4">
 					<p style="font-size: smaller;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="comment">
-
-			<div class="row">
-
-				<div class="span6 offset3">
-					<p>However, replies to replies are not indented further, they are simply displayed
-						in chronological order. Comments, regardless of whether or not they are replies,
-						will begin to fade away and eventually disappear altogether if they receive large
-						numbers of downvotes or are frequently reported. Lorem ipsum dolor sit amet, consectetur
-						adipiscing elit. Pellentesque tristique massa eget est accumsan quis tincidunt libero
-						facilisis. In ac tortor diam, sit amet volutpat.</p>
-				</div>
-
-				<div class="span3">
-
-					<div class="row">
-
-						<div class="span1" style="margin-top: 4px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
-								<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
-						</div>
-
-						<div class="span2" style="margin-left: 0px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">Username</a><br />
-							<small style="font-size: smaller;">About an hour ago</small>
-						</div>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="span8 offset4">
-					<p style="font-size: smaller;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="comment">
-
-			<div class="row">
-
-				<div class="span6 offset3">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
-						massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
-						amet volutpat.</p>
-				</div>
-
-				<div class="span3">
-
-					<div class="row">
-
-						<div class="span1" style="margin-top: 4px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
-								<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
-						</div>
-
-						<div class="span2" style="margin-left: 0px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">Username</a><br />
-							<small style="font-size: smaller;">About an hour ago</small>
-						</div>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="span8 offset4">
-					<p style="font-size: smaller;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="comment">
-
-			<div class="row">
-
-				<div class="span3">
-
-					<div class="row">
-
-						<div class="span1" style="margin-top: 4px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
-								<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
-						</div>
-
-						<div class="span2" style="margin-left: 0px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">Username</a><br />
-							<small style="font-size: smaller;">About an hour ago</small>
-						</div>
-
-					</div>
-
-				</div>
-
-				<div class="span9">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
-						massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
-						amet volutpat.</p>
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="comment">
-
-			<div class="row">
-
-				<div class="span3">
-
-					<div class="row">
-
-						<div class="span1" style="margin-top: 4px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
-								<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
-						</div>
-
-						<div class="span2" style="margin-left: 0px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">Username</a><br />
-							<small style="font-size: smaller;">About an hour ago</small>
-						</div>
-
-					</div>
-
-				</div>
-
-				<div class="span9">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
-						massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
-						amet volutpat.</p>
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="comment">
-
-			<div class="row">
-
-				<div class="span3">
-
-					<div class="row">
-
-						<div class="span1" style="margin-top: 4px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
-								<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
-						</div>
-
-						<div class="span2" style="margin-left: 0px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">Username</a><br />
-							<small style="font-size: smaller;">About an hour ago</small>
-						</div>
-
-					</div>
-
-				</div>
-
-				<div class="span9">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
-						massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
-						amet volutpat.</p>
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="comment">
-
-			<div class="row">
-
-				<div class="span3">
-
-					<div class="row">
-
-						<div class="span1" style="margin-top: 4px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
-								<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
-						</div>
-
-						<div class="span2" style="margin-left: 0px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">Username</a><br />
-							<small style="font-size: smaller;">About an hour ago</small>
-						</div>
-
-					</div>
-
-				</div>
-
-				<div class="span9">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
-						massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
-						amet volutpat.</p>
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="comment">
-
-			<div class="row">
-
-				<div class="span6 offset3">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
-						massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
-						amet volutpat.</p>
-				</div>
-
-				<div class="span3">
-
-					<div class="row">
-
-						<div class="span1" style="margin-top: 4px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
-								<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
-						</div>
-
-						<div class="span2" style="margin-left: 0px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">Username</a><br />
-							<small style="font-size: smaller;">About an hour ago</small>
-						</div>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="span8 offset4">
-					<p style="font-size: smaller;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="comment">
-
-			<div class="row">
-
-				<div class="span3">
-
-					<div class="row">
-
-						<div class="span1" style="margin-top: 4px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
-								<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
-						</div>
-
-						<div class="span2" style="margin-left: 0px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">Username</a><br />
-							<small style="font-size: smaller;">About an hour ago</small>
-						</div>
-
-					</div>
-
-				</div>
-
-				<div class="span9">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
-						massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
-						amet volutpat.</p>
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="comment">
-
-			<div class="row">
-
-				<div class="span3">
-
-					<div class="row">
-
-						<div class="span1" style="margin-top: 4px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
-								<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
-						</div>
-
-						<div class="span2" style="margin-left: 0px;">
-							<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">Username</a><br />
-							<small style="font-size: smaller;">About an hour ago</small>
-						</div>
-
-					</div>
-
-				</div>
-
-				<div class="span9">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
-						massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
-						amet volutpat.</p>
-				</div>
-
-			</div>
-
-			<div class="row">
-
-				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Reply</a></p>
 				</div>
 
 			</div>
