--- a/apps/ForumComposite/Views/Shared/Layout/SideBar/NewPost.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar/NewPost.cshtml
@@ -37,7 +37,7 @@
 				<label for="email">
 					Post</label>
 				<div class="input">
-					@Html.TextAreaFor(m => m.Body, 4, 6, new { @class ="x-large"})
+					@Html.TextAreaFor(m => m.Body, 4, 6, new { @class ="xlarge"})
 					<span class="help-block">Please be civil.</span>
 				</div>
 			</div>
