--- a/apps/ForumComposite/Views/Profile/Badges.cshtml
+++ b/apps/ForumComposite/Views/Profile/Badges.cshtml
@@ -1,19 +1,19 @@
-﻿@model ForumComposite.ViewModels.Profile.ProfileBadgesViewModel
+﻿@using Euclid.Common.Extensions
+@model ForumComposite.ViewModels.Profile.ProfileBadgesViewModel
 @{
-	ViewBag.Title = ForumName + " - {Username}'s Badges";
+	ViewBag.Title = ForumName + " - " + Model.User.Username + "'s Badges";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.ProfileBadgesClass = "active";
 }
 <ul class="breadcrumb">
 	<li><a href="@Url.RouteUrl("Home")">@ForumName Home</a> <span class="divider">/</span></li>
 	<li><a href="@Url.RouteUrl("AllProfiles")">All Users</a> <span class="divider">/</span></li>
-	<li><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">{Username}</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = Model.User.Username.Slugify() })">@Model.User.Username</a> <span class="divider">/</span></li>
 	<li class="active">Badges</li>
 </ul>
-<h1>{Username}'s Badges</h1>
+<h1>@Model.User.Username's Badges</h1>
 <hr />
-@RenderPage("_Tabs.cshtml")
-
+@Html.Partial("_Tabs", Model.User.Username.Slugify())
 <div class="row">
 
 	<div class="span12">
