--- a/apps/ForumComposite/Views/Profile/Favorites.cshtml
+++ b/apps/ForumComposite/Views/Profile/Favorites.cshtml
@@ -1,20 +1,19 @@
-﻿@model ForumComposite.ViewModels.Profile.ProfileFavoritesViewModel
+﻿@using Euclid.Common.Extensions
+@model ForumComposite.ViewModels.Profile.ProfileFavoritesViewModel
 @{
-	ViewBag.Title = ForumName + " - {Username}'s Favorites";
+	ViewBag.Title = ForumName + " - " + Model.User.Username + "'s Favorites";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.ProfileFavoritesClass = "active";
 }
 <ul class="breadcrumb">
 	<li><a href="@Url.RouteUrl("Home")">@ForumName Home</a> <span class="divider">/</span></li>
 	<li><a href="@Url.RouteUrl("AllProfiles")">All Users</a> <span class="divider">/</span></li>
-	<li><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
-				{Username}</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = Model.User.Username.Slugify() })">@Model.User.Username</a> <span class="divider">/</span></li>
 	<li class="active">Favorites</li>
 </ul>
-<h1>
-	{Username}'s Favorites</h1>
+<h1>@Model.User.Username's Favorites</h1>
 <hr />
-@RenderPage("_Tabs.cshtml")
+@Html.Partial("_Tabs", Model.User.Username.Slugify())
 @for (var i = 1; i < 11; i++)
 {
 	<div class="row" style="margin-top: 0px; margin-bottom: 0px;">
