--- a/apps/ForumComposite/Views/Profile/Overview.cshtml
+++ b/apps/ForumComposite/Views/Profile/Overview.cshtml
@@ -1,18 +1,20 @@
-﻿@model ForumComposite.ViewModels.Profile.ProfileOverviewViewModel
+﻿@using Euclid.Common.Extensions
+@model ForumComposite.ViewModels.Profile.ProfileOverviewViewModel
 @{
-	ViewBag.Title = ForumName + " - {Username}'s Profile";
+	ViewBag.Title = ForumName + " - " + Model.User.Username + "'s Profile";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.ProfileOverviewClass = "active";
 }
 <ul class="breadcrumb">
 	<li><a href="@Url.RouteUrl("Home")">@ForumName Home</a> <span class="divider">/</span></li>
 	<li><a href="@Url.RouteUrl("AllProfiles")">All Users</a> <span class="divider">/</span></li>
-	<li class="active">{Username}</li>
+	<li class="active">@Model.User.Username</li>
 </ul>
-<h1>{Username}'s Profile</h1>
+<h1>@Model.User.Username's Profile</h1>
 <hr />
 
-@RenderPage("_Tabs.cshtml")
+@Html.Partial("_Tabs", Model.User.Username.Slugify())
+
 <div class="row">
 
 	<div class="span3">
@@ -20,14 +22,19 @@
 	</div>
 
 	<div class="span6">
-		<h3>{Username}</h3>
-		<p>25 badges | 245 points | 465 comments | 3 posts</p>
+		<h3>@Model.User.Username</h3>
+		<p>@Model.User.BadgeCount badges | @Model.User.PointTotal points | @Model.User.CommentCount comments | @Model.User.PostCount posts</p>
 		<p>Located in Arlington, Virginia, USA</p>
 		<b>Custom profile fields</b>
 		<ul>
 			<li>Favorite Music: Loud</li>
 			<li>Political Affiliation: Kodos (why vote for the lesser of two evils?)</li>
 		</ul>
+		
+		@if(Model.IsCurrentUser)
+		{
+			<a href="#">Edit</a>
+		}
 	</div>
 
 </div>
