--- a/apps/ForumComposite/Views/Shared/Layout/SideBar/TopUsers.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar/TopUsers.cshtml
@@ -1,13 +1,14 @@
-﻿<h3>Top Users</h3>
+﻿@using Euclid.Common.Extensions
+<h3>Top Users</h3>
 
 @foreach(var user in TopUsers)
 {
 	<div class="row">
 	<div class="span1" style="margin-top: 4px;">
-		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = @user.Username.Slugify() })"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
 	</div>
 	<div class="span2" style="margin-left: 0px;">
-		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">@user.Username</a><br/>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = @user.Username.Slugify() })">@user.Username</a><br/>
 		<small style="font-size: smaller;">@user.PostCount posts, @user.CommentCount comments</small>
 	</div>
 </div>
