--- a/apps/ForumComposite/Views/Profile/RecentActivity.cshtml
+++ b/apps/ForumComposite/Views/Profile/RecentActivity.cshtml
@@ -16,44 +16,44 @@
 
 @Html.Partial("_Tabs", Model.User.Username.Slugify())
 
-@for (var i = 1; i < 11; i++)
+@foreach(var action in Model.Activity)
 {
-	<div class="row">
+	if(action.IsPost)
+	{
+		<div class="row">
 
-		<div class="span10">
-			<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">{Post Title}</a></h3>
-			<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-				dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
-																																																																																				Category</a></span></p>
+			<div class="span10">
+				<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">@action.AssociatedPostTitle</a></h3>
+				<p>@action.Body &mdash; <span style="text-align: right; font-size: smaller;"><em>@action.ActivityOccurredOn.ToString("h:mm tt M/d/yyyy")</em> in <a href="@Url.Action("Category")" class="label">
+																																																																																					Category</a></span></p>
 
-			<div class="row">
+				<div class="row">
 
-				<div class="span3 offset7" style="padding-top: 7px; text-align: right; font-size: smaller;">
-					<img src="../../Themes/default/images/balloon-white.png" />
-					<a href="#">999 comments</a></div>
+					<div class="span3 offset7" style="padding-top: 7px; text-align: right; font-size: smaller;">
+						<img src="../../Themes/default/images/balloon-white.png" />
+						<a href="#">999 comments</a></div>
+
+				</div>
 
 			</div>
 
 		</div>
+		<div class="row">
 
-	</div>
-	<div class="row">
+			<div class="span10 offset1">
+				<hr />
+			</div>
 
-		<div class="span10 offset1">
-			<hr />
 		</div>
-
-	</div>
-
-	if (i % 2 == 0)
+	}
+	else if (action.IsComment)
 	{
 		<div class="row">
 
 			<div class="span10">
 				<p>Comment on post: <strong style="font-size: 18px"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">
-																															{Post Title}</a></strong>. </p>
-				<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-					dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em></span></p>
+																															@action.AssociatedPostTitle</a></strong>. </p>
+				<p>@action.Body &mdash; <span style="text-align: right; font-size: smaller;"><em>@action.ActivityOccurredOn.ToString("h:mm tt M/d/yyyy")</em></span></p>
 			</div>
 
 		</div>
