display dates on post tiles

--- a/apps/ForumComposite/Views/Shared/PostTile.cshtml
+++ b/apps/ForumComposite/Views/Shared/PostTile.cshtml
@@ -51,7 +51,7 @@ else if (Page.Size.ToLower() == "Small".ToLower())
 
 	<@header><a href="@Url.RouteUrl("Post", new { postIdentifier = Page.Post.Identifier, postSlug = Page.Post.Slug })">@Page.Post.Title</a></@header>
 	<p style="@text">@truncate(Page.Post.Body, textLength)
-		&mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em>
+		&mdash; <span style="text-align: right; font-size: smaller;"><em>@Page.Post.Created.ToString("h:mm tt M/d/yyyy")</em>
 							in <a href="@Url.RouteUrl("Category", new { categorySlug = "category" })" class="label">
 								 	Another Category</a></span></p>
 	<p><span style="padding-top: 7px; text-align: right; font-size: smaller;">
@@ -66,7 +66,7 @@ else if (mode == "condensed")
 	<text>
 		<p style="@text"><b><a href="@Url.RouteUrl("Post", new { postIdentifier = Page.Post.Identifier, postSlug = Page.Post.Slug })">@Page.Post.Title</a></b><br />
 			@truncate(Page.Post.Body, 10)<br />
-			<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "user-profile-slug" })">
+			<span style="font-size: smaller;"><em>@Page.Post.Created.ToString("h:mm tt M/d/yyyy")</em> by <a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "user-profile-slug" })">
 																																			username</a> with <a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })#comments">33 comments.</a></span> </p>
 	</text>
 }
