--- a/apps/ForumComposite/Views/Profile/RecentActivity.cshtml
+++ b/apps/ForumComposite/Views/Profile/RecentActivity.cshtml
@@ -23,7 +23,7 @@
 		<div class="row">
 
 			<div class="span10">
-				<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">@action.AssociatedPostTitle</a></h3>
+				<h3><a href="@Url.RouteUrl("Post", new { postIdentifier = action.AssociatedPostIdentifier, postSlug = action.AssociatedPostTitle.Slugify() })">@action.AssociatedPostTitle</a></h3>
 				<p>@action.Body &mdash; <span style="text-align: right; font-size: smaller;"><em>@action.ActivityOccurredOn.ToString("h:mm tt M/d/yyyy")</em> in <a href="@Url.Action("Category")" class="label">
 																																																																																					Category</a></span></p>
 
@@ -51,7 +51,7 @@
 		<div class="row">
 
 			<div class="span10">
-				<p>Comment on post: <strong style="font-size: 18px"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">
+				<p>Comment on post: <strong style="font-size: 18px"><a href="@Url.RouteUrl("Post", new { postIdentifier = action.AssociatedPostIdentifier, postSlug = action.AssociatedPostTitle.Slugify() })">
 																															@action.AssociatedPostTitle</a></strong>. </p>
 				<p>@action.Body &mdash; <span style="text-align: right; font-size: smaller;"><em>@action.ActivityOccurredOn.ToString("h:mm tt M/d/yyyy")</em></span></p>
 			</div>
