--- a/apps/ForumComposite/Views/Profile/Favorites.cshtml
+++ b/apps/ForumComposite/Views/Profile/Favorites.cshtml
@@ -24,7 +24,7 @@
 				a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod.
 				&mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em>
 									in <a href="@Url.RouteUrl("Category", new { categorySlug = "category-slug" })" class="label">
-										 	Category</a> &middot; <a href="#">Remove</a></span></p>
+										 	Category</a> &middot; <img alt="Favorite" src="@Url.Content("~/Content/images/star.png")"/></span></p>
 			<hr />
 		</div>
 	</div>
