--- a/apps/ForumComposite/Views/Post/Detail.cshtml
+++ b/apps/ForumComposite/Views/Post/Detail.cshtml
@@ -105,7 +105,7 @@
 					}
 					else
 					{
-						<input type="image" border="0" height="16" width="16" title="Mark as favorite" src="@Url.Content("~/Content/images/star-empty.png")"/>
+						<input style="display: inline; height: 16px; width: 16px; border: 0px;" type="image" border="0" height="16" width="16" title="Mark as favorite" src="@Url.Content("~/Content/images/star-empty.png")"/>
 					}
 				}
 			</div>
