--- a/apps/ForumComposite/Views/Profile/Favorites.cshtml
+++ b/apps/ForumComposite/Views/Profile/Favorites.cshtml
@@ -15,6 +15,17 @@
 <hr />
 @Html.Partial("_Tabs", Model.User.Username.Slugify())
 
+@if(Model.Favorites.Count == 0)
+{
+	<div class="row">
+		<div class="span10">
+			
+			<p>This user has no favorites.</p>
+
+		</div>
+	</div>
+}
+
 @foreach(var favorite in Model.Favorites)
 {
 	if (favorite.IsPost)
