added basic pagination

--- a/apps/ForumComposite/Views/PostListing/All.cshtml
+++ b/apps/ForumComposite/Views/PostListing/All.cshtml
@@ -60,16 +60,17 @@
 	<li><a href="@Url.RouteUrl("AllPosts")">Oldest</a></li>
 </ul>
 
+@{
+	var pages = Model.Listing.TotalPosts % 16 + 1;
+}
+
 <div class="pagination">
 	<ul>
 		<li class="prev disabled"><a href="#">&larr; Previous</a></li>
-		<li><a href="#">1</a></li>
-		<li class="active"><a href="#">2</a></li>
-		<li><a href="#">3</a></li>
-		<li class="disabled"><a href="#">...</a></li>
-		<li><a href="#">45</a></li>
-		<li><a href="#">46</a></li>
-		<li><a href="#">47</a></li>
+		@for (var i = 1; i < pages + 1; i++ )
+	{
+		<li @if(i == Model.CurrentPage){<text>class="active"</text>}><a href="?page=@i">@i</a></li>
+	}
 		<li class="next"><a href="#">Next &rarr;</a></li>
 	</ul>
 </div>
